--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <audio controls src="Better Call Saul Main Title Theme (Extended).mp3"
 <br>
 <video controls>
-    <source src="C:\Users\Pera\Documents\better chronologicaly\Huell.mp4" type="video/mp4">
+    <source src="Huell.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
